<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_update_delay_title"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvUpdateFreqHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_update_delay_summary"/>
    <RadioGroup
        android:id="@+id/rdDelay"
        android:layout_margin="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_update_never"
            android:id="@+id/rb0"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_update_5"
            android:id="@+id/rb5"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_update_15"
            android:id="@+id/rb15"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_update_30"
            android:id="@+id/rb30"/>
    </RadioGroup>

</LinearLayout>